--- a/project/src/main/resources/templates/admin/category/edit.html
+++ b/project/src/main/resources/templates/admin/category/edit.html
@@ -37,13 +37,16 @@
 						</div>
 						<!-- /.box-header -->
 						<!-- form start -->
-						<form role="form" method="post" th:action="@{/admin/add-category}" th:object="${category}">
+						<form role="form" method="post" th:action="@{/admin/edit-category}" th:object="${category}">
+						
+							<input type="hidden" class="form-control" id="exampleInputEmail1"
+									th:field="*{id}">
 							<div class="box-body">
 								<div class="form-group">
-									<label for="exampleInputEmail1">Category Name</label> <input
+									<label for="exampleInputEmail1">Category Name</label> 
+									<input
 										type="text" class="form-control" id="exampleInputEmail1"
-										th:field="*{categoryName}" 
-										placeholder="Enter Category Name">
+										th:field="*{categoryName}">
 								</div>
 								<div class="form-group">
 									<label for="exampleInputElmail1">Category Status</label>
@@ -60,11 +63,10 @@
 								</div>
 
 							</div>
-					</div>
 					<!-- /.box-body -->
 
 					<div class="box-footer">
-						<button type="submit" class="btn btn-primary">Submit</button>
+						<button type="submit" class="btn btn-primary">Update</button>
 					</div>
 					</form>
 				</div>
