--- a/project/src/main/resources/templates/admin/fragments/header.html
+++ b/project/src/main/resources/templates/admin/fragments/header.html
@@ -4,7 +4,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg">BACKHOA_APTECH</span>
+      <span class="logo-lg">Home</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -113,8 +113,8 @@
                 <img th:src="@{/assets/images/user2-160x160.jpg}" class="img-circle" alt="User Image">
 
                 <p>
-                  Alexander Pierce - Web Developer
-                  <small>Member since Nov. 2012</small>
+                 <span sec:authentication="name"></span>  - Web Developer
+                  <small>Member since Mar. 2025</small>
                 </p>
               </li>
               <!-- Menu Body -->
