--- a/project/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/project/src/main/resources/templates/admin/fragments/sidebar.html
@@ -7,7 +7,7 @@
           <img th:src="@{/assets/images/user2-160x160.jpg}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+         <p>Hi, <span sec:authentication="name"></span>!</p>
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
