--- a/project/src/main/resources/templates/admin/product/edit.html
+++ b/project/src/main/resources/templates/admin/product/edit.html
@@ -37,30 +37,39 @@
 						</div>
 						<!-- /.box-header -->
 						<!-- form start -->
-						<form role="form" method="post" th:action="@{/admin/edit-category}" th:object="${category}">
+						<form role="form" method="post" th:action="@{/admin/product-edit}" th:object="${product}">
 						
 							<input type="hidden" class="form-control" id="exampleInputEmail1"
 									th:field="*{id}">
 							<div class="box-body">
 								<div class="form-group">
-									<label for="exampleInputEmail1">Category Name</label> 
+									<label for="exampleInputEmail1">Product Name</label> 
 									<input
 										type="text" class="form-control" id="exampleInputEmail1"
-										th:field="*{categoryName}">
+										th:field="*{productName}">				
 								</div>
 								<div class="form-group">
-									<label for="exampleInputElmail1">Category Status</label>
-									<div class="form-check form-check-inline">
-										<input type="radio" class="form-check-input" th:field="*{categoryStatus}" value="1"/> 
-										<label class="form-check-label" for="inlineRadio1">Active</label>
-									</div>
-
-									<div class="form-check form-check-inline">
-										<input type="radio" class="form-check-input" th:field="*{categoryStatus}" value="0"/> 
-										<label class="form-check-label" for="inlineRadio2">Hidden</label>
-									</div>
-
-								</div>
+                                    <label for="price">Price</label>
+                                    <input type="text" class="form-control" id="price"
+                                        th:field="*{price}" placeholder="Enter Price">
+                                </div>
+                                <div class="form-group">
+                                    <label for="fileImage">Image</label>
+                                    <input type="file" class="form-control" id="fileImage" name="fileImage">
+                                </div>
+                                <div class="form-group">
+                                    <label>Category</label>
+                                    <select class="form-control select2 select2-hidden-accessible"
+                                        style="width: 100%;" th:field="*{category.id}">
+                                        <option th:each="category : ${listCate}"
+                                            th:value="${category.id}" th:text="${category.categoryName}"></option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="editor1">Description</label>
+                                    <textarea id="editor1" name="editor1" rows="10" cols="80"
+                                        th:field="*{description}"></textarea>
+                                </div>
 
 							</div>
 					<!-- /.box-body -->
@@ -85,5 +94,9 @@
 	<!-- jQuery 3 -->
 
 	<div th:replace="admin/fragments/script :: script"></div>
+	    <script th:src="@{/assets/ckeditor/ckeditor.js}"></script>
+	<script>
+        CKEDITOR.replace('editor1');
+    </script>
 </body>
 </html>
