--- a/project/src/main/resources/templates/admin/category/index.html
+++ b/project/src/main/resources/templates/admin/category/index.html
@@ -3,91 +3,112 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="admin/fragments/head :: head"></head>
 <body class="hold-transition skin-blue sidebar-mini">
-<!-- Site wrapper -->
-<div class="wrapper">
+	<!-- Site wrapper -->
+	<div class="wrapper">
 
- <div th:replace="admin/fragments/header :: header"></div>
-  <!-- =============================================== -->
+		<div th:replace="admin/fragments/header :: header"></div>
+		<!-- =============================================== -->
 
-  <!-- Left side column. contains the sidebar -->
-  
-  <!-- =============================================== -->
-<aside th:replace="admin/fragments/sidebar ::sidebar"></aside>
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        Blank page
-        <small>it all starts here</small>
-      </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">Examples</a></li>
-        <li class="active">Blank page</li>
-      </ol>
-    </section>
+		<!-- Left side column. contains the sidebar -->
 
-    <!-- Main content -->
-    <section class="content">
+		<!-- =============================================== -->
+		<aside th:replace="admin/fragments/sidebar ::sidebar"></aside>
+		<!-- Content Wrapper. Contains page content -->
+		<div class="content-wrapper">
+			<!-- Content Header (Page header) -->
+			<section class="content-header">
+				<h1>
+					Blank page <small>it all starts here</small>
+				</h1>
+				<ol class="breadcrumb">
+					<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+					<li><a href="#">Examples</a></li>
+					<li class="active">Blank page</li>
+				</ol>
+			</section>
+
+			<!-- Main content -->
+			<section class="content">
 
 
-          <div class="box">
-            <div class="box-header with-border">
-              <h3 class="box-title">Danh sách danh mục</h3>
-              <div>
-              <a class="btn btn-success" href="add-category">Thêm mới danh mục</a>
-              </div>
-              
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-              <table class="table table-bordered">
-                <tbody><tr>
-                  <th style="width: 10px">ID</th>
-                  <th>Category name</th>
-                  <th>Status</th>
-                  <th>Action</th>
-                </tr>
-                
-                <tr th:each="category : ${list}">
-                  <td th:text="${category.id}" ></td>
-                  <td th:text="${category.categoryName}"></td>
-       			 <td th:if="${category.categoryStatus}"><span class="label label-success">Hiện</span></td>
-       			 <td th:if="${!category.categoryStatus}"><span class="label label-danger">Ẩn</span></td>
-                  <td>
-                  <a th:href="@{/admin/edit-category/{id}(id=${category.id})}" class="btn btn-success">Edit</a>
-                  <a th:href="@{/admin/delete-category/{id}(id=${category.id})}" onClick="return confirm('Bạn chắc chắn không')" class="btn btn-danger">Delete</a>
-                  </td>
-                </tr>
-                  
-                
-              </tbody></table>
-            </div>
-            <!-- /.box-body -->
-            <div class="box-footer clearfix">
-              <ul class="pagination pagination-sm no-margin pull-right">
-                <li><a href="#">«</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">»</a></li>
-              </ul>
-            </div>
-          </div>
+				<div class="box">
+					<div class="box-header with-border">
+						<h3 class="box-title">Danh sách danh mục</h3>
+						<div>
+							<a class="btn btn-success" href="add-category">Thêm mới danh mục</a>
+						</div>
 
-    </section>
-    <!-- /.content -->
-  </div>
-  <!-- /.content-wrapper -->
-  
-  <div th:replace="admin/fragments/footer :: footer"></div>
-  
-</div>
-<!-- ./wrapper -->
+					</div>
+					<!-- /.box-header -->
+					<div class="box-body">
 
-<!-- jQuery 3 -->
+						<form>
+							<div class="input-group input-group-sm hidden-xs"
+								style="width: 150px;">
+								<input type="text" name="keyword"
+									class="form-control pull-right" placeholder="Search" 
+									th:value="${keyword}">
 
-<div th:replace="admin/fragments/script :: script"></div>
+								<div class="input-group-btn">
+									<button type="submit" class="btn btn-default">
+										<i class="fa fa-search"></i>
+									</button>
+								</div>
+
+							</div>
+						</form>
+						<table class="table table-bordered">
+							<tbody>
+								<tr>
+									<th style="width: 10px">ID</th>
+									<th>Category name</th>
+									<th>Status</th>
+									<th>Action</th>
+								</tr>
+
+								<tr th:each="category : ${list}">
+									<td th:text="${category.id}"></td>
+									<td th:text="${category.categoryName}"></td>
+									<td th:if="${category.categoryStatus}"><span
+										class="label label-success">Hiện</span></td>
+									<td th:if="${!category.categoryStatus}"><span
+										class="label label-danger">Ẩn</span></td>
+									<td><a
+										th:href="@{/admin/edit-category/{id}(id=${category.id})}"
+										class="btn btn-success">Edit</a> <a
+										th:href="@{/admin/delete-category/{id}(id=${category.id})}"
+										onClick="return confirm('Bạn chắc chắn không')"
+										class="btn btn-danger">Delete</a></td>
+								</tr>
+
+
+							</tbody>
+						</table>
+					</div>
+					<!-- /.box-body -->
+					<div class="box-footer clearfix">
+						<ul class="pagination pagination-sm no-margin pull-right">
+							<li><a href="#">«</a></li>
+							<li><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">»</a></li>
+						</ul>
+					</div>
+				</div>
+
+			</section>
+			<!-- /.content -->
+		</div>
+		<!-- /.content-wrapper -->
+
+		<div th:replace="admin/fragments/footer :: footer"></div>
+
+	</div>
+	<!-- ./wrapper -->
+
+	<!-- jQuery 3 -->
+
+	<div th:replace="admin/fragments/script :: script"></div>
 </body>
 </html>
