--- a/project/src/main/resources/templates/admin/fragments/header.html
+++ b/project/src/main/resources/templates/admin/fragments/header.html
@@ -2,7 +2,7 @@
     <!-- Logo -->
     <a href="/admin" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>H</b>T</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg">Home</span>
     </a>
