--- a/project/src/main/resources/templates/admin/product/index.html
+++ b/project/src/main/resources/templates/admin/product/index.html
@@ -81,11 +81,20 @@
             <!-- /.box-body -->
             <div class="box-footer clearfix">
               <ul class="pagination pagination-sm no-margin pull-right">
-                <li><a href="#">«</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">»</a></li>
+                  <!-- Nút quay về trang đầu -->
+                <li th:if="${currentPage > 1}">
+                	<a th:href="@{'?pageNo=1'}">«</a>
+                </li>
+                    
+                    <!-- Hiển thị số trang --> 
+                <li th:each="i:${#numbers.sequence(1,totalPage)}" 
+                	th:classappend="${currentPage==i ? 'active' :''}">
+                	<a th:href="@{'?pageNo='+${i}}" th:text="${i}"></a></li>
+                	   
+                	    <!-- Nút sang trang cuối -->
+                <li th:if="${currentPage < totalPage}">
+                	<a th:href="@{'?pageNo='+${totalPage}}">»</a>
+                </li>
               </ul>
             </div>
           </div>
