--- a/project/src/main/resources/templates/admin/category/index.html
+++ b/project/src/main/resources/templates/admin/category/index.html
@@ -97,7 +97,8 @@
 							<!-- Hiển thị các số trang -->
 							<li th:each="i:${#numbers.sequence(1,totalPage)}" 
 							th:classappend="${currentPage==i?'active':''}">
-								<a th:href="@{${keyword != null && keyword!=''?'?keyword=' + keyword+'&':'?'}+'pageNo='+${i}}" th:text="${i}"></a>
+								<a th:href="@{${keyword != null && keyword!=''?'?keyword=' 
+								+ keyword+'&':'?'}+'pageNo='+${i}}" th:text="${i}"></a>
 							</li>
 							 <!-- Nút sang trang tiếp theo -->
 							<li th:if="${currentPage < totalPage}">
