--- a/project/src/main/resources/templates/admin/product/index.html
+++ b/project/src/main/resources/templates/admin/product/index.html
@@ -89,7 +89,8 @@
                     <!-- Hiển thị số trang --> 
                 <li th:each="i:${#numbers.sequence(1,totalPage)}" 
                 	th:classappend="${currentPage==i ? 'active' :''}">
-                	<a th:href="@{'?pageNo='+${i}}" th:text="${i}"></a></li>
+                	<a th:href="@{${keyword != null && keyword!=''?'?keyword=' 
+								+ keyword+'&':'?'}+'pageNo='+${i}}" th:text="${i}"></a></li>
                 	   
                 	    <!-- Nút sang trang cuối -->
                 <li th:if="${currentPage < totalPage}">
